# textbook-pdf-helper

./: .env.example  .gitignore  AGENTS.md  EDUCATIONAL_NOTES_GUIDE.md  FOLDER_STRUCTURE.md  Makefile  QUICKSTART.md  README.md  analyze_l2.py  check_content_quality.py  check_syntax.py  compare_extraction.py  concepts.yaml  concepts.yaml.example  draft-mapping.yaml  pyproject.toml  regenerate_concepts.py  review-package.json  run_murach_pipeline.py  run_murach_pipeline_debug.py  run_pipelines.py  run_ramakrishnan.py  sql-engage-adapter.ts  start.sh  test_quality_thresholds.py  tmp_inspect.py
.claude/: settings.local.json
data/: concept_curated_l3.json  concept_curated_units.json  concept_examples.json  concept_id_aliases.json  concept_registry.yaml  demo_scope_week1.yaml  demo_scope_week1_v15.yaml  practice_map.json
docs/: 03-pipeline-architecture.md  07-improvement-plan.md  08-audit-report.md  09-quality-fixes.md  ARCHITECTURE.md  DOCUMENTATION_INDEX.md  OUTPUT_SPEC.md  PIPELINE_DIAGRAM.md  PROJECT_BLUEPRINT.md  README.md  fallback_decision_rules_week1.md  pipeline_contract_week1_v15.md  week1_demo_runbook.md
schemas/: textbook-static-v1.json
scripts/: audit_curated_coverage.py  build_textbook_static.sh  generate_handoff_summary.py  regenerate_concepts.py  report_student_learning_quality.py  run_both_pdfs.sh  run_both_textbooks_with_ollama.ps1  run_reprocess.sh  run_week1_demo.ps1  verify_scope_config.py
test_output/: test_concept_joins.json  test_select_basic.md
test_reports/: CLEANUP_FINAL_SUMMARY.md  COMPREHENSIVE_TEST_SUMMARY.md  FINAL_TEST_SUMMARY.md  FINAL_VALIDATION_REPORT.md  TEST_SUMMARY.md  asset_extraction_test_report.md  auto_mapping_test_report.md  benchmark_real_pdfs.py  ci_integration_test_report.md  detailed_profiling.py  end_to_end_test_report.md  page_stability_results.json  performance_stress_test.py  provenance_test_report.md  quality_threshold_results.json  test_resource_limits.py  week1_cleanup_report.txt  week1_weak_slice_test_report.md
tests/: conftest.py  test_adaptive_handoff_smoke.py  test_artifact_contracts.py  test_asset_extraction.py  test_auto_mapping.py  test_chunker.py  test_concept_id_resolution.py  test_concept_mapper.py  test_concept_mapping_system.py  test_curated_content_resolution.py  test_data_integrity.py  test_day3_contracts.py  test_edge_cases_comprehensive.py  test_embedding_parity.py  test_extraction_quality.py  test_fallback_router.py  test_glm_ocr_client.py  test_hintwise_client.py  test_hintwise_integration.py  test_integration_ci.py  test_preflight.py  (+14 more)
(+513 files in other folders)
